--- a/03-lection1/01-button/button.css
+++ b/03-lection1/01-button/button.css
@@ -1,1 +1,60 @@
 /* Стилизация кнопки */
+@import '../assets/css/main.css';
+
+.button{
+    width:189px;
+    height: 48px;
+    border-radius: 8px;
+}
+
+.button_primary {
+    border: none;
+    background-color: var(--primary);
+    color: var(--white);
+    transition: opacity 200ms ease-in-out, background 200ms ease-in-out;
+}
+
+.button_primary:hover{
+    cursor: pointer;
+    background-color:#4263EB;
+}
+
+.button_primary:disabled{
+    cursor: not-allowed;
+    opacity: 50%;
+}
+
+.button_secondary {
+    border: none;
+    background-color: var(--secondary);
+    color: var(--white);
+    transition: opacity 200ms ease-in-out, background 200ms ease-in-out;
+}
+
+.button_secondary:hover{
+    cursor: pointer;
+    background-color: #5028C6;
+    ;
+}
+
+.button_secondary:disabled{
+    cursor: not-allowed;
+    opacity: 50%;
+}
+
+.button_alternate {
+    background-color: var(--white);
+    color: var(--black);
+    border: 1px solid var(--grey-3); 
+    transition: opacity 200ms ease-in-out, border 200ms ease-in-out;
+}
+
+.button_alternate:hover{
+    cursor: pointer;
+    border: 1px solid var(--black); 
+}
+
+.button_alternate:disabled{
+    cursor: not-allowed;
+    opacity: 50%;
+}
