--- a/03-lection1/02-accordion/accordion.css
+++ b/03-lection1/02-accordion/accordion.css
@@ -1,1 +1,57 @@
 /* Стилизация аккордеона */
+@import '../assets/css/main.css';
+
+.accordion__item {
+    font-family: 'Inter', sans-serif; 
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0em;
+    text-align: left;
+    margin-bottom: 8px;
+    padding-bottom:30px;
+    border-radius: 4px;
+    width: 730px;
+    border: 1px solid var(--grey-3);
+    overflow: hidden;
+    max-height: 72px;
+}
+
+.accordion__item[open]{
+    max-height: 144px;
+}
+
+.accordion__item:last-child {
+    margin-bottom: 0;
+}
+
+.accordion__summary {
+    color: black;
+    padding: 12px;
+    cursor: pointer;
+    list-style: none;
+    outline: none;
+    position: relative;
+    margin-left:18px;
+    margin-top:30px;
+}
+
+.accordion__summary::after {
+    content: url("arrow.svg");
+    position: absolute;
+    right: 30px;
+    color:#495057;
+    transition: transform 0.2s ease-in-out;
+}
+
+.accordion__item[open] .accordion__summary::after {
+    transform: rotate(180deg);
+}
+
+.accordion__content {
+    color:#495057;
+    width: 650px;
+    height: 48px;
+    margin-left: 30px;
+}
+
